--- a/src/grocery/style.css
+++ b/src/grocery/style.css
@@ -157,10 +157,10 @@ ul {
 
 /* ****************** project css ************************ */
 
-.section-center {
+.grocery {
   background: var(--white);
   width: 90vw;
-  max-width: 30rem;
+  max-width: 60rem;
   margin: 8rem auto;
   padding: 2rem;
   border-radius: var(--borderRadius);
@@ -168,11 +168,11 @@ ul {
   transition: var(--transition);
 }
 
-.section-center:hover {
+.grocery:hover {
   box-shadow: var(--shadow-3);
 }
 
-.section-center h2{
+.grocery h2 {
   text-align: center;
   margin-bottom: 1.5rem;
 }
@@ -183,28 +183,37 @@ ul {
 
 .form-control {
   margin-bottom: 1.5rem;
- display: grid;
- grid-template-columns: 1fr 100px;
+  display: grid;
+  grid-template-columns: 1fr 100px;
 }
+
 .form-control input {
-padding: 6px 12px;
-border: unset;
-outline: unset;
-background: var(--grey-100);
-border-bottom-left-radius: var(--borderRadius);
-border-top-left-radius: var(--borderRadius);
-width: 100%;
+  padding: 12px;
+  font-size: 18px;
+  border: unset;
+  outline: unset;
+  background: var(--grey-100);
+  border-bottom-left-radius: var(--borderRadius);
+  border-top-left-radius: var(--borderRadius);
+  width: 100%;
 }
-.form-control .btn{
+
+.form-control .btn {
+  padding: 12px;
   border-radius: 0;
   border-bottom-right-radius: var(--borderRadius);
-border-top-right-radius: var(--borderRadius);
+  border-top-right-radius: var(--borderRadius);
 }
-.items{
-margin-top: 2rem;
-display: grid;
-row-gap: 1rem;
+.addItem{
+  padding: 12px !important;
+  font-size: 18px !important;
 }
+.items {
+  margin-top: 2rem;
+  display: grid;
+  row-gap: 1rem;
+}
+
 .single-item {
   display: grid;
   grid-template-columns: auto 1fr auto;
@@ -212,11 +221,11 @@ row-gap: 1rem;
   column-gap: 1rem;
 }
 
-.remove-btn{
+.remove-btn {
   background: #000;
 }
+
 .remove-btn:hover {
   background: rgb(79, 10, 10);
   box-shadow: var(--shadow-3);
 }
-
